--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "apidaviplata",
   "version": "1.0.0",
+  "engines": {
+    "node": "16.17.0"
+  },
   "type": "module",
   "description": "",
   "main": "index.js",
